syntax = "proto3";

import "google/protobuf/timestamp.proto";

package authservice;

option go_package = "core/domain";

// service AuthService {
//     rpc Fetch (FetchAuthRequest) returns (AuthPaginationResponse);
// }

// message FetchAuthRequest {}

// message AuthPaginationResponse {
//     repeated Auth Items = 1;
//     int32 total = 2;
// }

message Auth {
    int32 id = 1;
    string type = 2;
    string hash = 3;
    string token = 4;
    int32 accountID = 5;
    bool revoked = 6;
    google.protobuf.Timestamp createdDate = 7;
}